k8s-yaml/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    version: rc-origin
  name: frontend
spec:
  type: NodePort
  ports:
  - name: "frontend-service"
    port: 5001
    targetPort: 80
  selector:
    app: frontend
